Enable more compiler warnings (#377)
* Enable more compiler warnings

We *are* security-oriented project so let's enable as many relevant
flags as possible. Here are some flags that I found useful after
looking through the latest lists for GCC 8 and Clang 7. (In addition
to catch-all "-Wall -Wextra" which enable most of the warnings.)

Not all flags are supported by all modern compiler versions that are
still in use. Wrap all relatively new flags into 'supported' checks
which verify that the flag seems to be actually supported by the
compiler. Skip all flags thar are not supported: we're not going to
get any use from them anyway but this should not prevent compilation.

* Switch Soter and Themis makefiles

This has been triggering me for a while, but Soter build commands
belong to soter.mk and Themis build instruction should be located
in themis.mk.

This works now because both files are included into the top-level
makefile, but it is still quite surpising if you are looking to add
some Themis-specific changes to the test makefile.

* Make unused parameters as unused

Recently added "-Wunused-parameter" uncovered a bunch of unused
parameters. Mark genuinely unused parameters with UNUSED macro.
Most of these are "this" pointers in Java binding.

* Drop dead code and unused variables

Recently added "-Wunused-functions" and "-Wunused-variables" have found
some functions and variables which are really not used. Remove them.

* Fix signed-unsigned comparisons

Recently enabled "-Wall" warnings are now triggered by comparisons
between signed and unsigned values. Insert explicit casts to silence
these warnings. All affected comparisons are valid as signed values
are either checked for being negative, or should never be negative
in the first place (but legacy APIs are legacy).

* Correct const methods in ThemisPP

Recently enabled warnings were triggered by useless "const" specifiers
on scalar return values of some methods. Thes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,11 @@ jobs:
     docker:
       - image: cossacklabs/build:ubuntu-bionic
     environment:
+      CC: clang-7
+      CXX: clang-7
       CLANG_FORMAT: clang-format-7
       CLANG_TIDY: clang-tidy-7
+      WITH_FATAL_WARNINGS: yes
     steps:
       - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install default-jdk nodejs npm
       - checkout
@@ -40,6 +43,7 @@ jobs:
     environment:
       GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
       CFLAGS: "-DCIRICLE_TEST"
+      WITH_FATAL_WARNINGS: yes
     steps:
       - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libssl-dev python python-setuptools python3 python3-setuptools ruby-dev nodejs npm lcov libc6-dbg rsync software-properties-common pkg-config clang afl
       - run: sudo ln -sf /usr/bin/gcov-5 /usr/bin/gcov
@@ -127,6 +131,7 @@ jobs:
     environment:
       GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
       CFLAGS: "-DCIRICLE_TEST"
+      WITH_FATAL_WARNINGS: yes
     steps:
       # dependencies
       - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libssl-dev python python-setuptools python3 python3-setuptools ruby-dev lcov libc6-dbg rsync software-properties-common pkg-config clang
