Improve JsThemis packaging
Add package-lock.json file into the repo. It is recommended to keep this
file committed into VCS. GitHub analyzer will scan it to see if there
are known security vulnerabilities in our dependencies.

Update the package.json file, add some missing metadata fields that we
fill in for WasmThemis. Also, add modern "mocha" as dev dependency.

Add an .npmignore file to prevent internal files from being packed into
the resulting distribution package.

--- a/src/wrappers/themis/jsthemis/package.json
+++ b/src/wrappers/themis/jsthemis/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "preuninstall": "rm -rf build/*"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cossacklabs/themis.git"
+  },
   "keywords": [
     "security",
     "encryption",
@@ -17,9 +21,16 @@
     "email": "dev@cossacklabs.com",
     "url": "https://www.cossacklabs.com/"
   },
-  "dependencies": {
-    "nan": "^2.8.0"
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/cossacklabs/themis/issues"
   },
-  "license": " Apache-2.0",
+  "homepage": "https://www.cossacklabs.com/themis/",
+  "dependencies": {
+    "nan": "^2.14.0"
+  },
+  "devDependencies": {
+    "mocha": "^7.1.1"
+  },
   "gypfile": true
 }
