Use environment files in GitHub Actions
GitHub Actions have deprecated "set-env" and "add-path" commands due to
a security vulnerability [1]. The grace period for migration has expired
around a week ago and now they cause hard errors instead of warnings.
Replace "set-env" and "add-path" usage with recommended environment
files approach [2], fixing the build errors.

[1]: https://github.blog/changelog/2020-10-01-github-actions-deprecating-set-env-and-add-path-commands/
[2]: https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#environment-files

(cherry picked from commit ac4ee562d61741aa90aa58ed5a13b8a1b5a8cc7e)

--- a/.github/workflows/test-objc.yaml
+++ b/.github/workflows/test-objc.yaml
@@ -207,7 +207,7 @@ jobs:
           # allow modified podspec to be published, and issues a warning
           # if the source is anything but a release tag. For regular builds
           # we allow warnings with this extra flag:
-          echo "::set-env name=ALLOW_WARNINGS::--allow-warnings"
+          echo "ALLOW_WARNINGS=--allow-warnings" >> "$GITHUB_ENV"
       - name: Syntax check
         run: pod spec lint $ALLOW_WARNINGS --quick
       - name: Lint podspec
